spring-minikube/devops/deployment-rating-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service-canary
  labels:
    run: rating-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      run: rating-service
      version: canary
  template:
    metadata:
      labels:
        run: rating-service
        version: canary
    spec:
      containers:
      - name: rating-service
        image: anithaannem/rating-service:2.0
        ports:
        - containerPort: 5000
