spring-minikube/devops/deployment-rating.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service
  labels:
    run: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: rating-service
  template:
    metadata:
      labels:
        run: rating-service
    spec:
      containers:
      - name: rating-service
        image: anithaannem/rating-service:1.0
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: rating-pv
          mountPath: /var/lib/rating-data
      volumes:
      - name: rating-pv
        persistentVolumeClaim:
          claimName: rating-mysql-pvc
