spring-minikube/devops/deployment-student-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service-canary
  labels:
    run: student-service
    version: canary
spec:
  replicas: 1   # only 1 pod to start
  selector:
    matchLabels:
      run: student-service
      version: canary
  template:
    metadata:
      labels:
        run: student-service
        version: canary
    spec:
      containers:
      - name: student-service
        image: anithaannem/student-service:2.0   # new version
        ports:
        - containerPort: 7000
