spring-minikube/devops/deployment-student.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    run: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: student-service
  template:
    metadata:
      labels:
        run: student-service
    spec:
      containers:
      - name: student-service
        image: anithaannem/student-service:latest
        ports:
        - containerPort: 7000
          protocol: TCP
