spring-minikube/devops/student-single-node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: anithaannem/student-service:1.0
        ports:
        - containerPort: 7000
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
