spring-minikube/devops/db-rating.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-mysql
  template:
    metadata:
      labels:
        app: rating-mysql
    spec:
      containers:
      - name: rating-mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: rating-mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: rating-mysql-storage
        persistentVolumeClaim:
          claimName: rating-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rating-mysql
spec:
  selector:
    app: rating-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
