spring-minikube/devops/rating-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rating-mysql
spec:
  serviceName: "rating-mysql"
  replicas: 1
  selector:
    matchLabels:
      app: rating-mysql
  template:
    metadata:
      labels:
        app: rating-mysql
    spec:
      containers:
      - name: rating-mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp2-csi
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rating-mysql
spec:
  selector:
    app: rating-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  clusterIP: None
