spring-minikube/devops/service-rating.yml
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  type: ClusterIP
  selector:
    run: rating-service
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
