spring-minikube/devops/service-student.yml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  type: ClusterIP
  selector:
    run: student-service
  ports:
    - name: http
      protocol: TCP
      port: 7000
      targetPort: 7000
