spring-minikube/devops/student-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-service
  type: NodePort
  ports:
  - port: 7000
    targetPort: 7000
    nodePort: 30007
