spring-minikube/devops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.cloudninja.live
    secretName: cloudninja-tls
  rules:
  - host: app.cloudninja.live
    http:
      paths:
      # HTTP01 challenge path for cert-manager
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
      # Student service path
      - path: /student
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 7000
      # Rating service path
      - path: /rating
        pathType: Prefix
        backend:
          service:
            name: rating-service
            port:
              number: 5000
